--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maritime Mission</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-</body>
+  <div class="backgrond"></div>
+
+  <img class="booyinsee"  id="booyinseeimg" src="booyinsee.png">
+
+  <img class="Missionbooy" id="Missionbooy-1" src="missionbooyimg.png">
+
+  <img class="see" id="seeimg" src="see.png" onclick="moveLeftAndRight()"> 
+
+  <div class="massage">
+
+       <p>!!متحمس تلعب</p> <p><span style="color: red;">&uarr;</span>  اضغط على المتابعة
+        لدخول ولا تتحمس كثير</p>
+ </div>
+
+   <div class="score">
+
+        <span class="score_titel"></span>
+        <span class="score_val"></span> 
+
+    </div>
+
+<script src="script.js"></script>
+
+ </body>   
 </html>
